[tool.poetry]
name = "python-ccb"
version = "1"
description = "Python wrapper for clearcheckbook"
authors = ["Oscar Curero <oscar@curero.es>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.6"
requests = "*"
attrs = "*"
pendulum = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.5"
coverage = "^6.2"
mkdocstrings = "^0.16.2"
markdown-include = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
